--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -487,7 +487,7 @@ hr::after {
     padding-right: var(--s-m);
 }
 
-.languages-inter {
+.languages__inter {
     margin-top: -1rem;
     background-image: url(../assets/svg/numbers.svg);
     background-repeat: no-repeat;
@@ -545,13 +545,6 @@ input {
 
 .hustles__spacing {
     padding-top: var(--s-4xl);
-}
-
-.choices {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: hidden;
-    gap: var(--s-s);
 }
 
 .interaction__choice {
@@ -780,6 +773,30 @@ input {
     height: 40px;
 }
 
+.choices {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--text-color) var(--coffee);
+    gap: var(--s-s);
+    padding-top: var(--s-m);
+    padding-bottom: var(--s-m);
+}
+
+.choices::-webkit-scrollbar {
+    height: 8px;
+}
+
+.choices::-webkit-scrollbar-thumb {
+    background-color: var(--text-color);
+    border-radius: 10px;
+}
+
+.choices::-webkit-scrollbar-track {
+    background-color: var(--coffee);
+
+}
 
 .consequences__choice {
     display: flex;
@@ -1028,7 +1045,8 @@ dialog {
     outline: 1px solid var(--cream);
 }
 
-.message {
+.message,
+.answ__msg {
     margin: var(--s-xs) 0;
     color: var(--accent-darkgold);
 }
